@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    
+
     <meta charset="utf-8">
     <title>Beyondskins</title>
 
@@ -27,15 +27,15 @@
 </p>
 
 
-    
+
     <!-- User -->
         <div id="user">
             <ul>
                 <li><a href="#" title="Login">Login</a></li>
             </ul>
         </div>
-        
-         
+
+
 
 
     <div id="wrapper">
@@ -62,7 +62,7 @@
                         </div>
                     </form>
                 </div>
-               
+
         <!-- Main Menu -->
 
                 <nav id="main-navigation" role="navigation">
@@ -82,12 +82,12 @@
                 <div class="clear"> </div>
             </div>
         </header>
-        
 
-    <!-- Columns -->    
+
+    <!-- Columns -->
         <div id="main">
 
-   
+
 
             <aside id="column-one">
                 <div class="visualPadding">
@@ -218,15 +218,16 @@
                     <div class="portlet">column two</div>
                 </div>
             </aside>
-            
+
         </div>
 
-    <!-- Footer --> 
+    <!-- Footer -->
         <footer role="contentinfo">
             <p id="footer-info">
-                <a href="http://plone.org">Plone</a> Theme designed by <a href="http://www.simplesconsultoria.com">Simples Consultoria</a>. Check out more free Plone Themes at Beyondskins website.<br>
-            </p> 
-          
+                <img src="img/cwi.jpg" alt="CWI logo" width='250px' />
+                <a href="http://www.cwi.nl/general/Address" title="click here to see full address info">Science&nbsp;Park&nbsp;123&nbsp; | 1098&nbsp;XG&nbsp;Amsterdam | </a>
+                <a href="mailto:info@cwi.nl">info@cwi.nl</a>
+            </p>
         </footer>
 
     </div>
