@@ -1,0 +1,3 @@
+2015-02-03  Michael Guravage  <guravage@weddell.itf.cwi.nl>
+
+	* Added cwi.jpg.
